still need to fix issue where song isn't removed from song list

--- a/client/src/Styles/HomePage.css
+++ b/client/src/Styles/HomePage.css
@@ -1,34 +1,23 @@
-
-
-.buttonContainer{
-    align-content: center;
-    justify-content: center;
+.container{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 100vh;
 }
 
-.loginButton {
-    background-color: #4CAF50; /* Example styles for the button */
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
+button{
+    background-color: green !important;
+    color: white !important;
+    border-radius: 10px;
+    border-color: green !important;
+    font-weight: light bold;
+    height: 30px !important;
+    width: 150px;
+}
+
+button:hover{
+    background-color: darkgreen !important;
+    border-color: darkgreen !important;
     cursor: pointer;
-    height: 50px;
-    width: auto;
-}
-
-.loginButton:hover {
-    background-color: #45a049;
-}
-
-.title{
-    display: flex;
-
-    flex-direction: row;
-}
-
-.container{
-    padding: 20px;
 }
