--- a/client/src/Styles/HomePage.css
+++ b/client/src/Styles/HomePage.css
@@ -14,6 +14,7 @@ button{
     font-weight: light bold;
     height: 30px !important;
     width: 150px;
+    box-shadow: none;
 }
 
 button:hover{
@@ -21,3 +22,15 @@ button:hover{
     border-color: darkgreen !important;
     cursor: pointer;
 }
+
+h1{
+    color: white !important;
+}
+
+p{
+    color: white !important;
+}
+
+
+  
+  
